--- a/client/index.html
+++ b/client/index.html
@@ -2,21 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Pilates with Fadia | Feel at Home in Your Body</title>
-    <meta name="description" content="Online pilates classes to help you feel stronger and more connected to your body and breath." />
-    <!-- Open Graph tags -->
-    <meta property="og:title" content="Pilates with Fadia | Feel at Home in Your Body" />
-    <meta property="og:description" content="Online pilates classes to help you feel stronger and more connected to your body and breath." />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Pilates with Fadia - Transform your body and mind with professional Pilates instruction in a welcoming environment." />
+    <meta name="keywords" content="pilates, fitness, exercise, wellness, studio, classes, reformer, mat pilates" />
+    <meta name="author" content="Fadia" />
+    
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://pilateswithfadia.com" />
-    <!-- Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <meta property="og:url" content="https://pilateswithfadia.com/" />
+    <meta property="og:title" content="Pilates with Fadia" />
+    <meta property="og:description" content="Transform your body and mind with professional Pilates instruction in a welcoming environment." />
+    <meta property="og:image" content="https://pilateswithfadia.com/og-image.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://pilateswithfadia.com/" />
+    <meta property="twitter:title" content="Pilates with Fadia" />
+    <meta property="twitter:description" content="Transform your body and mind with professional Pilates instruction in a welcoming environment." />
+    <meta property="twitter:image" content="https://pilateswithfadia.com/og-image.jpg" />
+
+    <!-- Preconnect to external domains for performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://www.google-analytics.com">
+    <link rel="preconnect" href="https://www.googletagmanager.com">
+    
+    <title>Pilates with Fadia</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <!-- This is a replit script which adds a banner on the top of the page when opened in development mode outside the replit environment -->
-    <script type="text/javascript" src="https://replit.com/public/js/replit-dev-banner.js"></script>
   </body>
 </html>
